arreglo titulos graf

--- a/analisis/codigos/calculo_renta_hidrocarburos.Rmd
+++ b/analisis/codigos/calculo_renta_hidrocarburos.Rmd
@@ -5144,18 +5144,6 @@ ggplotly(graf_renta_total_comparacion, width = 600, height = 400)
 ```
 
 
-```{r}
-x <- read_excel("../resultados/argentina/renta_comparacion_autores.xlsx") %>% 
-  filter(anio >1997,tipo_de_renta =="renta_total") %>% 
-  group_by(anio, unidad, autor) %>% 
-  # summarise(valor = sum(valor, na.rm = T)) %>% 
-  spread(key = autor, value = valor)  %>% 
-  mutate(variable = "Renta de la tierra hidrocarburífera total de Argentina" ) %>% 
-  select( anio, unidad, variable, everything(.), -tipo_de_renta)
-
-writexl::write_xlsx(x, path = "../resultados/argentina/tabla_comparacion_autores.xlsx")
-```
-
 
 # Exportacion de resultados
 
@@ -5208,7 +5196,7 @@ writexl::write_xlsx(list(produccion_crudo = prod_merge_crudo,
                          ganancia_y_pbi = ganancia_y_pbi,
                          tipo_cambio = tcp_anual_b,
                          ipc = ipc_promedio),
-                    path =  "resultados/argentina/variables.xlsx")
+                    path =  "../resultados/argentina/variables.xlsx")
 
 coeficientes <- list("Proporción de los servicios sobre extraccion" = servicio_s_extraccion,
                      "Tasa de depreciación de YPF" = consumo_k_fijo_ypf,
@@ -5219,7 +5207,7 @@ coeficientes <- list("Proporción de los servicios sobre extraccion" = servicio_
                      "Coeficiente consumo intermedio (Año)" =coef_consumo_intermedio$anio,
                      "Coeficiente consumo intermedio (1- VA/VBP)" =coef_consumo_intermedio$coef_ci)
 
-capture.output(coeficientes, file = "resultados/argentina/coeficientes.txt")
+capture.output(coeficientes, file = "../resultados/argentina/coeficientes.txt")
 
 writexl::write_xlsx(list(sum_mecanismos = renta_indirecto[,c(1:13, 17)],
                          descuentos_vbp = renta_directo, 
@@ -5243,28 +5231,39 @@ writexl::write_xlsx(list(sum_mecanismos = renta_indirecto[,c(1:13, 17)],
                            stock_balances = stock_balances_empresas,
                          segmento_YPF_PetBR =union_segmentos,
                           costos_ccnn=costos),
-                    path = "resultados/argentina/renta_de_la_tierra_hidrocarburifera_arg.xlsx") 
+                    path = "../resultados/argentina/renta_de_la_tierra_hidrocarburifera_arg.xlsx") 
+
+
+x <- renta_autores %>% 
+  filter(anio >1997,tipo_de_renta =="renta_total") %>% 
+  group_by(anio, unidad, autor) %>% 
+  # summarise(valor = sum(valor, na.rm = T)) %>% 
+  spread(key = autor, value = valor)  %>% 
+  mutate(variable = "Renta de la tierra hidrocarburífera total de Argentina" ) %>% 
+  select( anio, unidad, variable, everything(.), -tipo_de_renta)
+
+writexl::write_xlsx(x, path = "../resultados/argentina/tabla_comparacion_autores.xlsx")
 
 
 # Exportacion vieja
-# writexl::write_xlsx(list(metodo_indirecto = renta_indirecto[,c(1:13, 17)],
-#                          crudo_dif_precios_ms = renta_dif_precios_crudo[,-14], 
-#                          gas_dif_precios_ms = renta_diferencial_precios_gas[,-13],
-#                            crudo_sobrevaluacion_ms = renta_tcp_crudo[,-c(12:13)],
-#                            gas_sobrevaluacion_ms = renta_tcp_gas,
-#                          regalias = regalias_usd,
-#                          retenciones = retenciones_crudo,
-#                          subsidios = subsidios_hidrocarburos,
-#                          renta_balances = renta_produccion_balances  ), 
-#                     path = "resultados/argentina/renta_metodo_indirecto.xlsx")
+writexl::write_xlsx(list(metodo_indirecto = renta_indirecto[,c(1:13, 17)],
+                         crudo_dif_precios_ms = renta_dif_precios_crudo[,-14],
+                         gas_dif_precios_ms = renta_diferencial_precios_gas[,-13],
+                           crudo_sobrevaluacion_ms = renta_tcp_crudo[,-c(12:13)],
+                           gas_sobrevaluacion_ms = renta_tcp_gas,
+                         regalias = regalias_usd,
+                         retenciones = retenciones_crudo,
+                         subsidios = subsidios_hidrocarburos,
+                         renta_balances = renta_produccion_balances  ),
+                    path = "../resultados/argentina/renta_metodo_indirecto.xlsx")
 
-# writexl::write_xlsx(list(va_criterio_propio = criterio_propio,
-#                           metodo_directo = renta_directo),
-#                     path = "resultados/argentina/renta_metodo_directo.xlsx")
+writexl::write_xlsx(list(va_criterio_propio = criterio_propio,
+                          metodo_directo = renta_directo),
+                    path = "../resultados/argentina/renta_metodo_directo.xlsx")
 
-# writexl::write_xlsx(list( metodo_directo_pbi = renta_directo_pbi[,c(1,14:15)],
-#                          metodo_indirecto_pbi=renta_indirecto[,c(1,19:20)]),
-#                     path = "resultados/argentina/renta_sobre_pbi.xlsx")
+writexl::write_xlsx(list( metodo_directo_pbi = renta_directo_pbi[,c(1,14:15)],
+                         metodo_indirecto_pbi=renta_indirecto[,c(1,19:20)]),
+                    path = "../resultados/argentina/renta_sobre_pbi.xlsx")
 
 # writexl::write_xlsx(list(ccnn_oficial = ccnn_oficial,
 #                          criterio_ccnn=criterio_ccnn,
